--- a/CRUDQ22024/CRUDQ22024.csproj
+++ b/CRUDQ22024/CRUDQ22024.csproj
@@ -69,4 +69,9 @@
 		<PackageReference Include="SQLitePCLRaw.provider.e_sqlite3" Version="2.1.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	  <Folder Include="ViewModels\" />
+	</ItemGroup>
+
 </Project>
